@@ -16,6 +16,7 @@ software-center (1.1) UNRELEASED; urgency=low
     - add distro backend class that dynamically detects what distro
       to use and move distro specifc stuff (like screenshot url etc)
       there
+    - move maitainance end calculation here
   * softwarecenter/view/softwarepane.py:
     - default to new pathbar
 
